@@ -285,7 +285,8 @@ if ($this->data['inventory_mode'] != HOST_INVENTORY_DISABLED) {
 
 // append tabs to form
 $hostTab = new CTabView();
-if (!isset($_REQUEST['form_refresh'])) {
+// reset the tab when opening the form for the first time
+if (!hasRequest('masssave')) {
 	$hostTab->setSelected(0);
 }
 $hostTab->addTab('hostTab', _('Host'), $hostFormList);
